test/testcases/edit.exp
.TRY Configuration editing
.INP: configure
.INP: _regtest on
.INP: erase
.INP: erase nodes
.INP: op_defaults timeout=2m
.INP: node node1 	attributes mem=16G
.INP: primitive st stonith:null 	params hostlist='node1' 	meta description="some description here" requires=nothing 	op monitor interval=60m
.EXT crm_resource --show-metadata stonith:null
.EXT stonithd metadata
.INP: primitive p1 ocf:heartbeat:Dummy 	op monitor interval=60m 	op monitor interval=120m OCF_CHECK_LEVEL=10
.EXT crm_resource --show-metadata ocf:heartbeat:Dummy
.INP: filter "sed '$aprimitive p2 ocf:heartbeat:Dummy'"
.INP: filter "sed '$agroup g1 p1 p2'"
.INP: show
node node1 \
	attributes mem=16G
primitive p1 Dummy \
	op monitor interval=60m timeout=20s \
	op monitor interval=120m timeout=20s \
	op_params OCF_CHECK_LEVEL=10 \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive p2 Dummy
primitive st stonith:null \
	params hostlist=node1 \
	meta description="some description here" requires=nothing \
	op monitor interval=60m timeout=20 \
	op start timeout=20 interval=0s \
	op stop timeout=15 interval=0s
group g1 p1 p2
op_defaults op-options: \
	timeout=2m
.INP: filter "sed 's/p2/p3/;$aprimitive p3 ocf:heartbeat:Dummy'" g1
.INP: show
node node1 \
	attributes mem=16G
primitive p1 Dummy \
	op monitor interval=60m timeout=20s \
	op monitor interval=120m timeout=20s \
	op_params OCF_CHECK_LEVEL=10 \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive p2 Dummy
primitive p3 Dummy
primitive st stonith:null \
	params hostlist=node1 \
	meta description="some description here" requires=nothing \
	op monitor interval=60m timeout=20 \
	op start timeout=20 interval=0s \
	op stop timeout=15 interval=0s
group g1 p1 p3
op_defaults op-options: \
	timeout=2m
.INP: filter "sed '$aclone c1 p2'"
.INP: filter "sed 's/p2/g1/'" c1
.INP: filter "sed '/clone/s/g1/p2/'" c1 g1
.INP: filter "sed '/clone/s/p2/g1/;s/p3/p2/'" c1 g1
.INP: filter "sed '1,$d'" c1 g1
.INP: filter "sed -e '$aclone c1 g1' -e '$agroup g1 p1 p2'"
.INP: location l1 p3 100: node1
.INP: order o1 Mandatory: p3 c1
.INP: colocation cl1 inf: c1 p3
.INP: filter "sed '/cl1/s/p3/p2/'"
.INP: filter "sed '/cl1/d'"
.INP: primitive d1 ocf:heartbeat:Dummy
.INP: primitive d2 ocf:heartbeat:Dummy
.INP: primitive d3 ocf:heartbeat:Dummy
.INP: group g2 d1 d2
.INP: filter "sed '/g2/s/d1/p1/;/g1/s/p1/d1/'"
ERROR: Cannot create group:g1: Child primitive:d1 already in group:g2
.INP: filter "sed '/g1/s/d1/p1/;/g2/s/p1/d1/'"
.INP: filter "sed '$alocation loc-d1 d1 rule $id=r1 -inf: not_defined webserver rule $id=r2 webserver: defined webserver'"
.INP: filter "sed 's/not_defined webserver/& or mem number:lte 0/'" loc-d1
.INP: filter "sed 's/ or mem number:lte 0//'" loc-d1
.INP: filter "sed 's/not_defined webserver/& rule -inf: not_defined a2/'" loc-d1
.INP: filter "sed 's/not_defined webserver/& or mem number:lte 0/'" loc-d1
.INP: modgroup g1 add d3
.INP: modgroup g1 remove p1
.INP: modgroup g1 add p1 after p2
.INP: modgroup g1 remove p1
.INP: modgroup g1 add p1 before p2
.INP: modgroup g1 add p1
ERROR: 1: syntax in group: child p1 listed more than once in group g1 parsing 'group g1 p1 p2 d3 p1'
.INP: modgroup g1 remove st
Traceback (most recent call last):
    rv = self.execute_command() is not False
         ^^^^^^^^^^^^^^^^^^^^^^
    rv = self.command_info.function(*arglist)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    context.fatal_error("%s is not member of %s" % (prim_id, group_id))
    raise ValueError(msg)
ValueError: st is not member of g1
ERROR: 42: configure.modgroup: st is not member of g1
.INP: modgroup g1 remove c1
Traceback (most recent call last):
    rv = self.execute_command() is not False
         ^^^^^^^^^^^^^^^^^^^^^^
    rv = self.command_info.function(*arglist)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    context.fatal_error("%s is not member of %s" % (prim_id, group_id))
    raise ValueError(msg)
ValueError: c1 is not member of g1
ERROR: 43: configure.modgroup: c1 is not member of g1
.INP: modgroup g1 remove nosuch
Traceback (most recent call last):
    rv = self.execute_command() is not False
         ^^^^^^^^^^^^^^^^^^^^^^
    rv = self.command_info.function(*arglist)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    context.fatal_error("%s is not member of %s" % (prim_id, group_id))
    raise ValueError(msg)
ValueError: nosuch is not member of g1
ERROR: 44: configure.modgroup: nosuch is not member of g1
.INP: modgroup g1 add c1
ERROR: a group may contain only primitives; c1 is clone
.INP: modgroup g1 add nosuch
ERROR: g1 refers to missing object nosuch
.INP: filter "sed 's/^/# this is a comment\n/'" loc-d1
.INP: rsc_defaults $id="rsc_options" failure-timeout=10m
.INP: filter "sed 's/2m/60s/'" op-options
.INP: show op-options
op_defaults op-options: \
	timeout=60s
.INP: property stonith-enabled=true
.INP: show cib-bootstrap-options
property cib-bootstrap-options: \
	stonith-enabled=true
.INP: filter 'sed "s/stonith-enabled=true//"'
.INP: show cib-bootstrap-options
property cib-bootstrap-options:
.INP: primitive d4 ocf:heartbeat:Dummy
.INP: primitive d5 ocf:heartbeat:Dummy
.INP: primitive d6 ocf:heartbeat:Dummy
.INP: order o-d456 d4 d5 d6
.INP: tag t-d45: d4 d5
.INP: show type:order
order o-d456 d4 d5 d6
order o1 Mandatory: p3 c1
.INP: show related:d4
primitive d4 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
tag t-d45 d4 d5
order o-d456 d4 d5 d6
.INP: show
node node1 \
	attributes mem=16G
primitive d1 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive d2 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive d3 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive d4 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive d5 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive d6 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive p1 Dummy \
	op monitor interval=60m timeout=20s \
	op monitor interval=120m timeout=20s \
	op_params OCF_CHECK_LEVEL=10 \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive p2 Dummy
primitive p3 Dummy
primitive st stonith:null \
	params hostlist=node1 \
	meta description="some description here" requires=nothing \
	op monitor interval=60m timeout=20 \
	op start timeout=20 interval=0s \
	op stop timeout=15 interval=0s
group g1 p1 p2 d3
group g2 d1 d2
clone c1 g1
tag t-d45 d4 d5
location l1 p3 100: node1
location loc-d1 d1 \
	rule -inf: not_defined webserver or mem number:lte 0 \
	rule -inf: not_defined a2 \
	rule webserver: defined webserver
order o-d456 d4 d5 d6
order o1 Mandatory: p3 c1
property cib-bootstrap-options:
rsc_defaults rsc_options: \
	failure-timeout=10m
op_defaults op-options: \
	timeout=60s
.INP: commit
.EXT crmd metadata
.EXT pengine metadata
.EXT cib metadata
.INP: _test
.INP: verify
.INP: primitive a0 ocf:heartbeat:Dummy
.INP: primitive a1 ocf:heartbeat:Dummy
.INP: primitive a2 ocf:heartbeat:Dummy
.INP: primitive a3 ocf:heartbeat:Dummy
.INP: primitive a4 ocf:heartbeat:Dummy
.INP: primitive a5 ocf:heartbeat:Dummy
.INP: primitive a6 ocf:heartbeat:Dummy
.INP: primitive a7 ocf:heartbeat:Dummy
.INP: primitive a8 ocf:heartbeat:Dummy
.INP: primitive a9 ocf:heartbeat:Dummy
.INP: primitive aErr ocf:heartbeat:Dummy
.INP: group as a0 a1 a2 a3 a4 a5 a6 a7 a8 a9 aErr
.INP: commit
.INP: cd ..
.INP: cd configure
.INP: filter "sed '/as/s/a9//'"
.INP: filter "sed '/as/s/a1/a1 a9/'"
.INP: commit
.INP: cd ..
.INP: cd configure
.INP: filter "sed '/abs/s/a9//'"
.INP: filter "sed '/abs/s/a8/a8 a9/'"
.INP: show
node node1 \
	attributes mem=16G
primitive a0 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive a1 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive a2 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive a3 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive a4 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive a5 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive a6 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive a7 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive a8 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive a9 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive aErr Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive d1 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive d2 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive d3 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive d4 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive d5 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive d6 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive p1 Dummy \
	op monitor interval=60m timeout=20s \
	op monitor interval=120m timeout=20s \
	op_params OCF_CHECK_LEVEL=10 \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive p2 Dummy
primitive p3 Dummy
primitive st stonith:null \
	params hostlist=node1 \
	meta description="some description here" requires=nothing \
	op monitor interval=60m timeout=20 \
	op start timeout=20 interval=0s \
	op stop timeout=15 interval=0s
group as a0 a1 a9 a2 a3 a4 a5 a6 a7 a8 aErr
group g1 p1 p2 d3
group g2 d1 d2
clone c1 g1
tag t-d45 d4 d5
location l1 p3 100: node1
location loc-d1 d1 \
	rule -inf: not_defined webserver or mem number:lte 0 \
	rule -inf: not_defined a2 \
	rule webserver: defined webserver
order o-d456 d4 d5 d6
order o1 Mandatory: p3 c1
property cib-bootstrap-options:
rsc_defaults rsc_options: \
	failure-timeout=10m
op_defaults op-options: \
	timeout=60s
.INP: commit
INFO: 89: apparently there is nothing to commit
INFO: 89: try changing something first
.INP: _test
.INP: verify
.INP: show
node node1 \
	attributes mem=16G
primitive a0 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive a1 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive a2 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive a3 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive a4 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive a5 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive a6 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive a7 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive a8 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive a9 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive aErr Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive d1 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive d2 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive d3 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive d4 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive d5 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive d6 Dummy \
	op monitor timeout=20s interval=10s \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive p1 Dummy \
	op monitor interval=60m timeout=20s \
	op monitor interval=120m timeout=20s \
	op_params OCF_CHECK_LEVEL=10 \
	op start timeout=20s interval=0s \
	op stop timeout=20s interval=0s
primitive p2 Dummy
primitive p3 Dummy
primitive st stonith:null \
	params hostlist=node1 \
	meta description="some description here" requires=nothing \
	op monitor interval=60m timeout=20 \
	op start timeout=20 interval=0s \
	op stop timeout=15 interval=0s
group as a0 a1 a9 a2 a3 a4 a5 a6 a7 a8 aErr
group g1 p1 p2 d3
group g2 d1 d2
clone c1 g1
tag t-d45 d4 d5
location l1 p3 100: node1
location loc-d1 d1 \
	rule -inf: not_defined webserver or mem number:lte 0 \
	rule -inf: not_defined a2 \
	rule webserver: defined webserver
order o-d456 d4 d5 d6
order o1 Mandatory: p3 c1
property cib-bootstrap-options:
rsc_defaults rsc_options: \
	failure-timeout=10m
op_defaults op-options: \
	timeout=60s
.INP: commit
INFO: 93: apparently there is nothing to commit
INFO: 93: try changing something first
